# doe-egot-system

./: README.md  gen_dummy_cert.sh
dcm/: CMakeLists.txt  README.md  plan_of_attack.md
dcm/msg_logs/: dtm_messages_testing.txt  dtm_messages_testing.xml  ffs.txt  gprof_output_test2.txt
dcm/src/: CMakeLists.txt  main.cpp  playground.cpp
dcm/src/command_pattern/: dcm_commands.cpp  ecs_dcm.cpp
dcm/src/cta2045/: CMakeLists.txt  README.md
dcm/src/cta2045_receiver/: CMakeLists.txt  cta2045_receiver.cpp  ecs_epri_ucm_impl.cpp
dcm/src/ecs/: CMakeLists.txt
dcm/src/ecs/include/ecs/: dcm_components_module.hpp  dcm_systems_module.hpp  der_components_module.hpp  der_sim_module.hpp  der_simulator.hpp  sim_invoker_module.hpp
dcm/src/https/: https_client.cpp
dcm/src/https/include/https/: https_client.hpp  root_certificates.hpp
dcm/src/xml_writer/: CMakeLists.txt  abstract_command.cpp  announce_xml.cpp  announce_xml.h  main.cpp
dcm/tests/: CMakeLists.txt  main.cpp
docs/: DTM_DCM_API.md
dtm/scripts/: Updated_trustlog_testing1.xml  v2_dtm_server_indie.py
